--- a/Source Code/KTXSV/Views/Shared/_Layout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                 <div class="col-md-4 mb-3">
                     <h5 class="text-uppercase fw-bold">Ký túc xá HUFLIT</h5>
                     <p class="small">
-                        “Kết nối sinh viên – Quản lý tiện lợi – Trải nghiệm ký túc xá thông minh cùng 
+                        “Kết nối sinh viên – Quản lý tiện lợi – Trải nghiệm ký túc xá thông minh cùng
                         <strong>HUFLIT DORMITORY</strong>".
                         Cùng bạn xây dựng môi trường học tập và sinh hoạt năng động – Bước đệm cho hành trình trưởng thành tại HUFLIT
                     </p>
@@ -120,8 +120,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    @RenderSection("scripts", required: false)
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    @RenderSection("scripts", required: false)
 </body>
 </html>
